force-app/main/default/objects/Transfer_Log__c/Transfer_Log__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail for inter-store transfers and compliance outcomes.</description>
    <label>Transfer Log</label>
    <nameField>
        <displayFormat>TRN-{000000}</displayFormat>
        <label>Transfer Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>