force-app/main/default/objects/Transfer_Log__c/fields/Inventory_Position__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Target inventory position for which this transfer was evaluated</description>
    <label>Inventory Position</label>
    <referenceTo>Inventory_Position__c</referenceTo>
    <relationshipLabel>Transfer Logs</relationshipLabel>
    <relationshipName>Inventory_Position_Transfer_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>