force-app/main/default/objects/Transfer_Log__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Medication associated with this transfer</description>
    <label>Medication</label>
    <referenceTo>Medication__c</referenceTo>
    <relationshipLabel>Transfer Logs</relationshipLabel>
    <relationshipName>Medication_Transfer_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>