force-app/main/default/objects/Transfer_Log__c/fields/Quantity_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Transferred__c</fullName>
    <description>Quantity moved from source to target (0 for blocked)</description>
    <label>Quantity Transferred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>