force-app/main/default/objects/Transfer_Log__c/fields/Source_Store__c.field-meta.xml
<CustomField>
    <fullName>Source_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source Pharmacy Store for the transfer</description>
    <label>Source Store</label>
    <referenceTo>Pharmacy_Store__c</referenceTo>
    <relationshipLabel>Source Transfer Logs</relationshipLabel>
    <relationshipName>Source_Transfer_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>