force-app/main/default/objects/Transfer_Log__c/fields/Target_Store__c.field-meta.xml
<CustomField>
    <fullName>Target_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Target Pharmacy Store for the transfer</description>
    <label>Target Store</label>
    <referenceTo>Pharmacy_Store__c</referenceTo>
    <relationshipLabel>Target Transfer Logs</relationshipLabel>
    <relationshipName>Target_Transfer_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>