force-app/main/default/objects/Transfer_Log__c/fields/Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Date__c</fullName>
    <description>Date/time the transfer was executed or evaluated</description>
    <label>Transfer Date</label>
    <type>DateTime</type>
</CustomField>