force-app/main/default/objects/Transfer_Log__c/fields/Transfer_Status__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Status__c</fullName>
    <description>Status of the transfer transaction</description>
    <label>Transfer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>